<resources>
    <string name="app_name">FitMaker</string>
    <string name="facebook_app_id">457551064449409</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>


    <!--큐레이션 질문-->
    <string name="curation_question1">당신의 성별이 궁금해요!</string>
    <string name="curation_question2">운동은 자주 하시는 편인가요?</string>
    <string name="curation_question3_1">운동을 자주하시는 군요! 이유가 듣고 싶어요</string>
    <string name="curation_question3_2">운동을 하지 않은 이유가 궁금해요!</string>
    <string name="curation_question4">핏메이커를 찾으신 이유를 알려주세요!</string>
    <string name="curation_question5">당신이 원하는 운동 스타일을 알려주세요!</string>
    <string name="curation_question6">당신이 원하는 몸매는 무엇인가요?</string>

    <!--큐레이션 대답-->
    <string name="curation_answer1_A">여성</string>
    <string name="curation_answer1_B">남성</string>
    <string name="curation_answer2_A">네 자주하는 편이에요!</string>
    <string name="curation_answer2_B">아니요.. 거의 하지 않는편이에요</string>
    <string name="curation_answer3_1_A">운동하는게 즐거워요!</string>
    <string name="curation_answer3_1_B">건강관리를 위해서 하는편이에요</string>
    <string name="curation_answer3_2_A">시간이 없어요!</string>
    <string name="curation_answer3_2_B">운동이 싫어서요..</string>
    <string name="curation_answer3_2_C">힘들어서 하기 싫어요</string>
    <string name="curation_answer4_A">체력이 너무 약해요.. 체력을 기르고 싶어요</string>
    <string name="curation_answer4_B">난 너무 통통해.... 다이어트하고싶어요</string>
    <string name="curation_answer4_C">너무 마르기만했어요.. 멋진 몸매를 가지고싶어요</string>
    <string name="curation_answer5_A">집에서도 할 수있는 간단한 운동</string>
    <string name="curation_answer5_B">힘들어도 강력한 효과를 발휘하는 운동!</string>
    <string name="curation_answer5_C">무리없이 언제 어디서나 가능한 운동!</string>
    <string name="curation_answer6_1_A">가슴-어깨-팔	</string>
    <string name="curation_answer6_1_B">허리 -복부</string>
    <string name="curation_answer6_1_C">엉덩이</string>
    <string name="curation_answer6_1_D">허벅지-종아리</string>
    <string name="curation_answer6_2_A">가슴-어깨-팔</string>
    <string name="curation_answer6_2_B">등</string>
    <string name="curation_answer6_2_C">복부</string>
    <string name="curation_answer6_2_D">엉덩이 허벅지 종아리</string>

    <!--navigation 버튼-->

    <string name="navigation_button_login">로그인</string>
    <string name="navigation_button_exercise_play">운동플레이</string>
    <string name="navigation_button_recommend_curriculum">추천 커리큘럼</string>
    <string name="navigation_button_friend_list">친구 목록</string>
    <string name="navigation_button_my_style">내 큐레이션 추천운동 보기</string>
    <string name="navigation_button_setting_curation">큐레이션 재설정</string>
    <string name="navigation_button_ongoing_project">참여중인 프로젝트</string>
    <string name="navigation_button_setting">설정하기</string>


    <string name="setting_notice">공지사항</string>
    <string name="setting_push">푸쉬 알림 설정</string>
    <string name="setting_version">버전 정보</string>
    <string name="setting_developers">만든 이</string>
    <string name="setting_policy">이용약관</string>
    <string name="setting_agreement">개인정보 동의서</string>
    <string name="setting_logout">로그아웃</string>


    <string name="main_dialog">오늘의 운동 코스</string>

    <string name="result">매일 꾸준히 하는 것이 중요합니다</string>
    <string name="result_day">일일 운동 시간 : </string>
    <string name="result_week">주간 운동 시간 : </string>

    <string name="friend_request_accept">수락</string>
    <string name="friend_request_reject">거절</string>

    <!--메인페이지 메뉴-->
    <string name="main_menu_share">공유하기</string>
    <string name="main_menu_my_profile_change">내 프로필 사진 변경</string>
    <string name="main_menu_background_change">배경 사진 변경</string>
    <string name="main_dialog_confirm">확인</string>
    <string name="main_dialog_next">다음날에 도전해 주세요~</string>

    <!--일반메뉴-->
    <string name="login_guest">게스트 입장</string>


    <!--액티비티 툴바 이름-->
    <string name="activity_main">비키니 프로젝트</string>
    <string name="activity_badge">컬렉션</string>
    <string name="activity_friend_list">친구 목록</string>
    <string name="activity_friend_request">친구 요청</string>
    <string name="activity_friend_search">친구 찾기</string>
    <string name="activity_setting">설정하기</string>
    <string name="activity_notice">공지사항</string>
    <string name="activity_policy">이용약관</string>
    <string name="activity_developers">만든이</string>
    <string name="activity_start">반갑습니다!</string>


    <!--힌트 이름-->
    <string name="hint_name">이름</string>
    <string name="hint_email">이메일 주소</string>
    <string name="hint_password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="login_facebook">Facebook으로 로그인</string>
    <string name="forget_id">아이디나 비밀번호를 잊으셨나요?</string>
    <string name="recommend">추천운동</string>
    <string name="friend_ranking">친구 랭킹</string>
    <string name="see_friend_profile">프로필 보기</string>
    <string name="logout_text">정말로 로그아웃 하시겠습니까?</string>
    <string name="btn_no">아니오</string>
    <string name="btn_yes">예</string>


    <string name="project_youtube">해당 프로젝트의 유튜브 보고 오기</string>


    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>



</resources>
