<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exercise_play"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_button_exercise_play" />
        <item
            android:id="@+id/nav_recommend_curriculum"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_button_recommend_curriculum" />
        <item
            android:id="@+id/nav_friend_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_button_friend_list" />
        <item
            android:id="@+id/nav_my_style"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_button_my_style" />
        <item
            android:id="@+id/nav_setting_curation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_button_setting_curation" />
        <item
            android:id="@+id/nav_ongoing_project"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_button_ongoing_project" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="설정하기" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
