<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
    <item
        android:id="@+id/main_menu_share"
        android:orderInCategory="100"
        android:title="@string/main_menu_share"
        app:showAsAction="never"
        android:actionProviderClass= "android.widget.ShareActionProvider"/>
    </group>


        <item
            android:id="@+id/main_menu_my_profile_change"
            android:orderInCategory="200"
            android:title="@string/main_menu_my_profile_change"
            app:showAsAction="never" />
        <item
            android:id="@+id/main_menu_background_change"
            android:orderInCategory="300"
            android:title="@string/main_menu_background_change"
            app:showAsAction="never" />

</menu>