<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_gender_curation"
    app:orientation="horizontal"
    app:columnCount="2"
    app:rowCount="2"
    tools:context=".Curation.CurationQuestion1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/curation_answer6_1_A"
        android:background="@drawable/img_cur_6f_a"
        android:id="@+id/btn_1"
        android:textColor="@color/fit_white"
        android:textSize="@dimen/fit_text_size_curation_answer"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        />
    <Button
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/curation_answer6_1_B"
    android:id="@+id/btn_2"
        android:background="@drawable/img_cur_6f_b"
        android:textColor="@color/fit_white"
        android:textSize="@dimen/fit_text_size_curation_answer"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
    />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/curation_answer6_1_C"
        android:id="@+id/btn_3"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:textColor="@color/fit_white"
        android:textSize="@dimen/fit_text_size_curation_answer"
        android:background="@drawable/img_cur_6f_c"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/curation_answer6_1_D"
        android:id="@+id/btn_4"
        android:background="@drawable/img_cur_6f_d"
        android:textColor="@color/fit_white"
        android:textSize="@dimen/fit_text_size_curation_answer"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        />

</android.support.v7.widget.GridLayout>