<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_gender_curation"
    app:orientation="vertical"
    app:columnCount="2"

    tools:context=".Curation.CurationQuestion1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:text="@string/curation_answer4_A"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/fit_white"
        android:textSize="@dimen/fit_text_size_curation_answer"
        android:id="@+id/btn_1"
        app:layout_rowWeight="1"
        android:background="@drawable/img_cur_4_a"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/curation_answer4_B"
        android:textSize="@dimen/fit_text_size_curation_answer"
        android:background="@drawable/img_cur_4_b"
        android:textColor="@color/fit_white"
        android:id="@+id/btn_2"
        app:layout_rowWeight="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/curation_answer4_C"
        android:textSize="@dimen/fit_text_size_curation_answer"
        android:textColor="@color/fit_white"
        android:id="@+id/btn_3"
        android:background="@drawable/img_cur_4_c"
        app:layout_rowWeight="1"
        />


</android.support.v7.widget.GridLayout>